Changes to allow for generated images from the remote server. - Images are put in a question attempt specific directory, i.e.   dataroot/questionattempt/$attemptid/$questionid   and the dataroot/questionattempt/$attemptid directory is removed when the   attempt is deleted. - These changes now require moodle 1.9 or the moodle patch MDL-10198 to be   applied to a moodle 1.8 server.  It would not be too difficult to get around   this patch, but we would rather not.
git-svn-id: file:///home/leif/tmp/svnitf/ltjprocessed@25 ea2af722-1045-0410-acf0-f51e52c24f95

--- a/display.html
+++ b/display.html
@@ -5,6 +5,9 @@
 <?php if ($image) { ?>
     <img class="qimage" src="<?php echo $image; ?>" alt="" />
 <?php } ?>
+<?php if ($genimage) { ?>
+    <img class="qimage" src="<?php echo $genimage; ?>" alt="" />
+<?php } ?>
 
 <div class="ablock clearfix">
   <?php if ($answer_form) { ?>
