There is now a method to fail gracefully and present appropriate error methods to appropriate roles
git-svn-id: file:///home/leif/tmp/svnitf/ltjprocessed@28 ea2af722-1045-0410-acf0-f51e52c24f95

--- a/display.html
+++ b/display.html
@@ -1,3 +1,15 @@
+<?php if ($student_warning) { ?>
+<div class="errorbox">
+  <?php echo $student_warning; ?>
+</div>
+<?php } ?>
+
+<?php if ($teacher_warning) { ?>
+<div class="errorbox">
+  <?php echo $teacher_warning; ?>
+</div>
+<?php } ?>
+
 <div class="qtext">
     <?php echo $questiontext; ?>
 </div>
